--- a/src/components/CourseList/styles.css
+++ b/src/components/CourseList/styles.css
@@ -28,14 +28,27 @@
   height: 418px;
   background-color: var(--c-shade);
 }
-
+.MuiAppBar-colorDefault{
+  background-color: var(--c-shade);
+}
 .MuiTab-wrapper {
   text-transform: capitalize;
 }
 
+.jss5 {
+  background-color: var(--c-primary) !important;
+}
+
+.jss8 {
+  background-color: var(--c-shade);
+}
+
 .PrivateTabIndicator-colorPrimary-5 {
   background-color: var(--c-primary) !important;
-  border-bottom: 2px solid var(--c-primary);
+}
+
+.PrivateTabIndicator-colorPrimary-5 {
+  border-bottom: 2px solid var(--c-primary) !important;
 }
 
 .MuiTabs-root {
@@ -43,6 +56,7 @@
   margin: 0 auto;
   background-color: transparent;
 }
+
 
 .makeStyles-root-3 {
   background-color: var(--c-shade) !important;
