--- a/src/components/CourseSuggest/styles.css
+++ b/src/components/CourseSuggest/styles.css
@@ -25,3 +25,15 @@
   justify-content: space-between;
   /* background-color: grey; */
 }
+
+/* Material UI */
+.fyLrfx{
+  display: none !important;
+}
+.ilexzX:hover:enabled{
+  background-color: var(--c-grey) !important;
+}
+.ilexzX.rec.sc-bdVaJa{
+  background: var(--c-grey);
+  color: white;
+}
